Changelog
=========

2.8 - Unreleased
----------------


2.7 - 2009-11-13
----------------

* Added AccessControl import to tests to avoid cyclic import issue in
  Zope 2.12.
  [davisagli]

2.6 - 2009-05-18
----------------

* Clarified license to be only GPL.
  [hannosch]

* Declare package dependencies and fixed deprecation warnings for use
  of Globals.
  [hannosch]

2.5 - December 19, 2008
-----------------------

* Cleaned out tests: removing ZTC cruft, turning them into proper unit tests
  and removing tests that tested other non-index components.
  [mj]

* Fixed level handling for queries where a (path, level) tuple is passed in
  instead of using the general level parameter.
  [mj]

* Refactored and documented the index codebase. Several bugs were discovered 
  and solved in the process. Missing functionality was also added, all search
  options should now work across all scenarios.
  [mj]

2.4.1 - September 28, 2008
--------------------------

- Fix typo in setup.py which broke installation of the egg
  [ree]

  

2.4 - September 11, 2006
------------------------

- Relaxed a check for path only allowing strings so far. Now we except all
  basestrings. This closes http://dev.plone.org/plone/ticket/5617.
  [hannosch]

- Converted log infrastructure to use Python's logging module instead zLOG.
  [hannosch] 

2.3 - December 18, 2005
-----------------------

- Added some extra debug information when an improper path is cataloged.
  [sidnei]

2.2 - October 7, 2005
---------------------

- Add seperate index structures on the parent path and the full path of all
  objects.  This significantly improves scaling for navtrees, breadcrumbs,
  and listings.
  [alecm]

- Assume that EPI is used inside same container as content and use relative
  search instead of absolute - basically transforming / plonesite search
  to / search with startlevel set to 1 instead of 0.
  [tesdal]

2.1 - May 20, 2005
------------------
